--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "mobx": "^6.13.1",
+    "mobx-react-lite": "^4.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
